# poe-solana

./: Anchor.toml  LICENSE.md  README.md  package-lock.json  package.json
app/: package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/about/: page.tsx
app/src/app/create-poll/: creation-form.tsx  page.tsx
app/src/app/dashboard/: analytics.tsx  creation-form.tsx  dashboard.tsx  page.tsx  polls.tsx
app/src/components/: category-badge-filter.tsx  connect-wallet-button.tsx  dark-mode-toggle.tsx  estimate-bar.tsx  estimate-slider.tsx  home-tabs.tsx  main-nav.tsx  mobile-nav.tsx  my-polls-tab.tsx  nav-bar.tsx  poll-card.tsx  poll-filter.tsx  request-airdrop.tsx  settings-sidebar.tsx  sidebar-nav.tsx  user-nav.tsx
app/src/contexts/: ContextProvider.tsx
app/src/hooks/: useAnchorProgram.tsx
app/src/idl/: poe.json  poe.ts
app/src/types/: options.ts  poe_types.ts
app/utils/: sendVersionedTransaction.ts
programs/poe/: Cargo.toml
programs/poe/src/: constants.rs  contexts.rs  errors.rs  lib.rs  states.rs  utils.rs
programs/poe/src/contexts/: add_metadata.rs  collect_points.rs  create_poll.rs  initialize.rs  make_estimate.rs  register_user.rs  remove_estimate.rs  resolve_poll.rs  start_poll.rs  update_estimate.rs
programs/poe/src/states/: betting_list.rs  poe_state.rs  poll.rs  poll_estimate_update.rs  scoring_list.rs  user.rs  user_estimate.rs  user_estimate_update.rs  user_score.rs
scripts/: collectPoints.ts  createMetadata.ts  generateKeypair.ts  initializePoe.ts  requestAirdrop.ts
tests/: poe.ts
(+32 files in other folders)
