[package]
name = "poe"
version = "0.1.0"
description = "Proof of Estimate - Prediction Poll"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poe"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.0", features = ["init-if-needed"]}
anchor-spl = "0.30.0"
bytemuck = "1.15.0"
mpl-token-metadata = "4.1.2"
